cabal-version: 3.4
name:          Feynman
version:       0.1.0.0
synopsis:      Quantum circuit optimization and verification tools
description:
  Feynman is a toolkit for quantum circuit analysis in the path integral
  model of quantum mechanics. The toolkit comprises synthesis,
  optimization and verification methods based around representations of
  circuit actions as sums-over-paths.

license:       BSD-2-Clause
license-file:  LICENSE.md
author:        Matthew Amy
maintainer:    matt.e.amy@gmail.com
copyright:     2016 Matthew Amy
category:      Quantum
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/meamy/feynman

library
  ghc-options:        -O2
  default-extensions:
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GADTs

  hs-source-dirs:     src
  exposed-modules:
    Feynman.Algebra.Base
    Feynman.Algebra.Linear
    Feynman.Algebra.Matroid
    Feynman.Algebra.Pathsum.Balanced
    Feynman.Algebra.Polynomial
    Feynman.Algebra.Polynomial.Multilinear
    Feynman.Algebra.Polynomial.Multilinear.Groebner
    Feynman.Algebra.Polynomial.Univariate
    Feynman.Core
    Feynman.Optimization.ARD
    Feynman.Optimization.Clifford
    Feynman.Optimization.PhaseFold
    Feynman.Optimization.RelationalFold
    Feynman.Optimization.RelationalFoldNL
    Feynman.Optimization.StateFold
    Feynman.Optimization.Swaps
    Feynman.Optimization.TPar
    Feynman.Synthesis.Pathsum.Clifford
    Feynman.Synthesis.Pathsum.Unitary
    Feynman.Synthesis.Phase
    Feynman.Synthesis.Reversible
    Feynman.Synthesis.Reversible.Gray
    Feynman.Synthesis.Reversible.Parallel
    Feynman.Util.Unicode
    Feynman.Verification.Symbolic

  build-depends:
    , array            >=0.5.1.0
    , base             >=4.9
    , bv
    , bytestring
    , containers       >=0.6.3.1
    , fast-digits      >=0.2.1.0
    , fin              >=0.1.1
    , ghc-prim         >=0.5.0.0
    , integer-gmp      >=1.0.0.1
    , mtl
    , parsec           >=3.0
    , parsec3-numbers
    , QuickCheck       >=2.8.2
    , random
    , vec

  default-language:   Haskell2010

library Frontend
  ghc-options:        -O2
  default-extensions:
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GADTs

  hs-source-dirs:     frontend
  exposed-modules:
    Feynman.Frontend.DotQC
    Feynman.Frontend.OpenQASM.Lexer
    Feynman.Frontend.OpenQASM.Parser
    Feynman.Frontend.OpenQASM.Syntax
    Feynman.Frontend.OpenQASM3.Ast
    Feynman.Frontend.OpenQASM3.Chatty
    Feynman.Frontend.OpenQASM3.Driver
    Feynman.Frontend.OpenQASM3.Lexer
    Feynman.Frontend.OpenQASM3.Parser
    Feynman.Frontend.OpenQASM3.Semantics
    Feynman.Frontend.OpenQASM3.Syntax
    Feynman.Frontend.OpenQASM3.Syntax.Transformations

  build-tool-depends:
    , alex:alex    >=3.5
    , happy:happy  >=2.0

  build-depends:
    , array            >=0.5.1.0
    , base             >=4.9
    , bv
    , bytestring
    , containers       >=0.6.3.1
    , fast-digits      >=0.2.1.0
    , Feynman
    , fin              >=0.1.1
    , ghc-prim         >=0.5.0.0
    , integer-gmp      >=1.0.0.1
    , mtl
    , parsec           >=3.0
    , parsec3-numbers
    , QuickCheck       >=2.8.2
    , random
    , vec

  default-language:   Haskell2010

executable feynopt
  main-is:            FeynOpt.hs
  buildable:          True
  ghc-options:        -O2
  default-extensions:
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GADTs

  hs-source-dirs:     tools
  other-modules:      Benchmarks
  build-depends:
    , ansi-terminal
    , array             >=0.5.1.0
    , base
    , bv
    , bytestring
    , containers        >=0.6.3.1
    , deepseq
    , directory
    , Feynman
    , Feynman:Frontend
    , filepath
    , QuickCheck        >=2.8.2
    , random

  default-language:   Haskell2010

executable feynver
  main-is:            FeynVerify.hs
  buildable:          True
  ghc-options:        -O2
  default-extensions:
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GADTs

  hs-source-dirs:     tools
  build-depends:
    , ansi-terminal
    , array             >=0.5.1.0
    , base
    , bv
    , bytestring
    , containers        >=0.6.3.1
    , Feynman
    , Feynman:Frontend
    , parsec            >=3.0
    , QuickCheck        >=2.8.2
    , transformers      >=0.5.2.0

  default-language:   Haskell2010

executable qc2qasm
  main-is:          QC2Qasm.hs
  buildable:        True
  ghc-options:      -O2
  hs-source-dirs:   tools
  build-depends:
    , base
    , bytestring
    , Feynman
    , Feynman:Frontend
    , filepath

  default-language: Haskell2010

executable ar21
  main-is:          ar21.hs
  buildable:        True
  ghc-options:      -O2
  hs-source-dirs:   scripts
  build-depends:
    , base
    , containers  >=0.6.3.1
    , Feynman
    , mtl

  default-language: Haskell2010

executable abr22
  main-is:          abr22.hs
  buildable:        True
  ghc-options:      -O2
  hs-source-dirs:   scripts
  build-depends:
    , base
    , containers  >=0.6.3.1
    , Feynman
    , mtl
    , QuickCheck  >=2.8.2

  default-language: Haskell2010

executable hs
  main-is:          hs.hs
  buildable:        True
  ghc-options:      -O2
  hs-source-dirs:   scripts
  build-depends:
    , base
    , containers  >=0.6.3.1
    , Feynman
    , mtl
    , QuickCheck  >=2.8.2

  default-language: Haskell2010
