name:                Feynman
version:             0.1.0.0
synopsis:            Quantum circuit optimization and verification tools
description:         Feynman is a toolkit for quantum circuit analysis in the path integral
                     model of quantum mechanics. The toolkit comprises synthesis, 
                     optimization and verification methods based around representations of 
                     circuit actions as sums-over-paths.
license:             BSD2
license-file:        LICENSE.md
author:              Matthew Amy
maintainer:          matt.e.amy@gmail.com
copyright:           2016 Matthew Amy
category:            Quantum
build-type:          Simple
cabal-version:       1.24

source-repository head
  type:              git
  location:          https://github.com/meamy/feynman

library
  ghc-options:         -O2
  default-extensions:  GADTs,
                       ExistentialQuantification,
                       FlexibleContexts,
                       FlexibleInstances
  hs-source-dirs:      src
  exposed-modules:     Feynman.Core,
                       Feynman.Util.Unicode,

                       Feynman.Algebra.Base,
                       Feynman.Algebra.Matroid,
                       Feynman.Algebra.Linear,
                       Feynman.Algebra.Polynomial,
                       Feynman.Algebra.Polynomial.Univariate,
                       Feynman.Algebra.Polynomial.Multilinear,
                       Feynman.Algebra.Polynomial.Multilinear.Groebner
                       Feynman.Algebra.Pathsum.Balanced,

                       Feynman.Synthesis.Phase,
                       Feynman.Synthesis.Reversible,
                       Feynman.Synthesis.Reversible.Parallel,
                       Feynman.Synthesis.Reversible.Gray,
                       Feynman.Synthesis.Pathsum.Clifford,
                       Feynman.Synthesis.Pathsum.Unitary,

                       Feynman.Optimization.Swaps,
                       Feynman.Optimization.PhaseFold,
                       Feynman.Optimization.StateFold,
                       Feynman.Optimization.TPar,
                       Feynman.Optimization.Clifford,
                       Feynman.Optimization.ARD,
                       Feynman.Optimization.RelationalFold,
                       Feynman.Optimization.RelationalFoldNL,

                       Feynman.Verification.Symbolic,

                       Feynman.Frontend.DotQC
                       Feynman.Frontend.Frontend
                       Feynman.Frontend.OpenQASM.Driver
                       Feynman.Frontend.OpenQASM.Syntax
                       Feynman.Frontend.OpenQASM.Lexer
                       Feynman.Frontend.OpenQASM.Parser
                       Feynman.Frontend.OpenQASM3.Ast
                       Feynman.Frontend.OpenQASM3.Chatty
                       Feynman.Frontend.OpenQASM3.Driver
                       Feynman.Frontend.OpenQASM3.Lexer
                       Feynman.Frontend.OpenQASM3.Parser
                       Feynman.Frontend.OpenQASM3.Semantics
                       Feynman.Frontend.OpenQASM3.Syntax
                       Feynman.Frontend.OpenQASM3.Syntax.Transformations

  build-tools:         alex, happy
  build-depends:       QuickCheck >= 2.8.2,
                       array >= 0.5.1.0,
                       base >= 4.9,
                       bv,
                       bytestring,
                       containers >= 0.6.3.1,
                       deepseq,
                       fast-digits >= 0.2.1.0,
                       fin >= 0.1.1,
                       ghc-prim >= 0.5.0.0,
                       integer-gmp >= 1.0.0.1,
                       mtl,
                       parsec >= 3.0,
                       parsec3-numbers,
                       random,
                       vec
  default-language:    Haskell2010
  

executable feynopt
  main-is:             FeynOpt.hs
  buildable:           True
  ghc-options:         -O2
  default-extensions:  GADTs,
                       ExistentialQuantification,
                       FlexibleContexts,
                       FlexibleInstances
  hs-source-dirs:      tools
  other-modules:       Benchmarks
  build-depends:       Feynman,
                       QuickCheck >= 2.8.2,
                       ansi-terminal,
                       array >= 0.5.1.0,
                       base,
                       bv,
                       bytestring,
                       containers >= 0.6.3.1,
                       deepseq,
                       directory,
                       filepath,
                       random
  default-language:    Haskell2010

executable feynver
  main-is:             FeynVerify.hs
  buildable:           True
  ghc-options:         -O2
  default-extensions:  GADTs,
                       ExistentialQuantification,
                       FlexibleContexts,
                       FlexibleInstances
  hs-source-dirs:      tools
  build-depends:       Feynman,
                       QuickCheck >= 2.8.2,
                       ansi-terminal,
                       array >= 0.5.1.0,
                       base,
                       bv,
                       bytestring,
                       containers >= 0.6.3.1,
                       parsec >= 3.0,
                       transformers >= 0.5.2.0
  default-language:    Haskell2010

executable qc2qasm
  main-is:             QC2Qasm.hs
  buildable:           True
  ghc-options:         -O2
  hs-source-dirs:      tools
  build-depends:       Feynman,
                       base,
                       bytestring,
                       filepath
  default-language:    Haskell2010

executable ar21
  main-is:             ar21.hs
  buildable:           True
  ghc-options:         -O2
  hs-source-dirs:      scripts
  build-depends:       Feynman,
                       base,
                       mtl,
                       containers >= 0.6.3.1
  default-language:    Haskell2010

executable abr22
  main-is:             abr22.hs
  buildable:           True
  ghc-options:         -O2
  hs-source-dirs:      scripts
  build-depends:       Feynman,
                       base,
                       mtl,
                       containers >= 0.6.3.1,
                       QuickCheck >= 2.8.2
  default-language:    Haskell2010

executable hs
  main-is:             hs.hs
  buildable:           True
  ghc-options:         -O2
  hs-source-dirs:      scripts
  build-depends:       Feynman,
                       base,
                       mtl,
                       containers >= 0.6.3.1,
                       QuickCheck >= 2.8.2
  default-language:    Haskell2010
